Attempt to fix HPUX test failures. Bug 311279 crmftest core dumps on HP-UX (verbal) r=wtc